[STYLES] Mejora en los estilos de inicio de sesion
Se agregaron animaciones

--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -59,4 +59,17 @@
       <a [routerLink]="'forgot-password'">¿Olvidaste tu contraseña?</a>
     </div>
   </div>
+  <div class="animation-area">
+    <ul class="box-area">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
 </div>
