[FEAT] Obtener programa
Servicio para obtener los datos de un programa

HU-Edicion de programa.

--- a/src/app/ui/components/admin/admin.component.html
+++ b/src/app/ui/components/admin/admin.component.html
@@ -1,5 +1,6 @@
 <div class="admin">
-  <div class="admin-content">
+  <dukes-loading *ngIf="loading"></dukes-loading>
+  <div class="admin-content" *ngIf="!loading">
     <h2>Panel Usuario Admin</h2>
 
     <div class="tabs">
