--- a/src/app/ui/tabs/edit-program/edit-program.component.html
+++ b/src/app/ui/tabs/edit-program/edit-program.component.html
@@ -43,11 +43,9 @@
             <input
               type="text"
               disabled="true"
-              [value]="
-                module.percentage
-                  ? module.percentage
-                  : 'El porcentaje no está definido'
-              "
+              value="Valor del modulo {{
+                module.percentage | number: '1.0-0'
+              }}%"
             />
           </div>
         </div>
