--- a/src/app/ui/components/my-information/my-information.component.html
+++ b/src/app/ui/components/my-information/my-information.component.html
@@ -53,7 +53,6 @@
           <div class="form-group">
             <textarea
               type="text"
-              placeholder="Descripción"
               name="description"
               [(ngModel)]="userInfo.description"
               disabled="true"
@@ -76,7 +75,7 @@
                 placeholder="Escribe tu nombre..."
                 name="name"
                 required
-                pattern="^[a-zA-Z\s]{3,50}"
+                pattern="[A-Za-z\s\u00C0-\u017F\u00f1\u00d1]{3,50}"
                 [ngModel]="userInfo.name"
                 #name="ngModel"
                 [class.invalid]="name.invalid && name.touched"
@@ -100,20 +99,16 @@
             </div>
             <div class="form-group">
               <input
-                type="text"
-                placeholder="Correo electrónico"
+                type="email"
                 name="email"
-                pattern="^[a-zA-Z\s]{3,50}"
                 [(ngModel)]="userInfo.email"
                 disabled="true"
               />
             </div>
             <div class="form-group">
               <input
-                type="email"
-                placeholder="Rol"
+                type="text"
                 name="rol"
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
                 [(ngModel)]="userInfo.rol"
                 disabled="true"
               />
@@ -123,7 +118,7 @@
                 type="text"
                 placeholder="Escribe tu biografía..."
                 name="description"
-                pattern="[A-Za-z0-9\s]{5,50}"
+                pattern="[A-Za-z0-9\s\u00C0-\u017F\,\.\¿\?\u00f1\u00d1]{3,100}"
                 [ngModel]="userInfo.description"
                 #description="ngModel"
                 [class.invalid]="description.invalid && description.touched"
