--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,17 @@ body {
   @include styles.font-body;
 }
 
+*::-webkit-scrollbar {
+  transition: styles.$animation-bezier;
+  width: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: styles.$color-blue-2;
+  border-radius: 5px;
+  transition: styles.$animation-bezier;
+}
+
 h1,
 h2 {
   @include styles.font-title;
