[FEAT] Acordeon para asignar notas
Se creo un acordeon donde se muestra la informacion del programa para asignarle las notas

HU-Interfaz para la asignación de notas.

--- a/src/app/ui/tabs/score-user/score-user.component.html
+++ b/src/app/ui/tabs/score-user/score-user.component.html
@@ -1,1 +1,5 @@
-<p>score-user works!</p>
+<div class="score-user">
+  <div class="score-user_content">
+    <dukes-accordion></dukes-accordion>
+  </div>
+</div>
