--- a/src/app/ui/shared/accordion/accordion.component.scss
+++ b/src/app/ui/shared/accordion/accordion.component.scss
@@ -37,16 +37,80 @@
     }
 
     &_content {
+      align-items: center;
       background-color: rgba(styles.$color-secondary, 0.5);
       backdrop-filter: brightness(90%);
+      display: flex;
       height: 0;
+      justify-content: center;
       overflow: hidden;
       overflow-y: auto;
+      position: relative;
       transition: styles.$animation-bezier;
+      width: 100%;
 
       &.active {
-        height: 150px;
+        height: auto;
         padding: styles.$box-pad-half;
+      }
+
+      .accordion-c {
+        position: relative;
+        width: 90%;
+
+        &-itemC {
+          margin-bottom: styles.$box-mrg-half;
+          position: relative;
+          width: 100%;
+
+          &_label {
+            background-color: rgba(styles.$color-blue, 0.5);
+            backdrop-filter: brightness(20%);
+            border-radius: 5px;
+            color: styles.$color-white;
+            cursor: pointer;
+            font-size: 1.5rem;
+            font-weight: 500;
+            font-family: "Noto Sans JP", sans-serif;
+            position: relative;
+            padding: styles.$box-pad-base;
+
+            &::before {
+              content: "+";
+              font-size: 2.5rem;
+              right: calc(25px + styles.$box-pad-base);
+              position: absolute;
+              top: 50%;
+              transform: translateY(-50%);
+            }
+
+            &.active {
+              &::before {
+                content: "-";
+              }
+            }
+          }
+
+          &_contentC {
+            align-items: center;
+            background-color: rgba(styles.$color-tertiary, 0.5);
+            backdrop-filter: brightness(70%);
+            display: flex;
+            height: 0;
+            overflow: hidden;
+            overflow-y: auto;
+            transition: styles.$animation-bezier;
+
+            &.active {
+              height: 150px;
+              padding: styles.$box-pad-half;
+            }
+
+            &::-webkit-scrollbar {
+              width: 0;
+            }
+          }
+        }
       }
 
       &::-webkit-scrollbar {
