--- a/src/app/ui/tabs/score-user/score-user.component.html
+++ b/src/app/ui/tabs/score-user/score-user.component.html
@@ -1,5 +1,10 @@
 <div class="score-user">
   <div class="score-user_content">
-    <dukes-accordion></dukes-accordion>
+    <dukes-accordion
+      [program]="program"
+      [courses]="courses"
+      [modules]="modules"
+      [userId]="userId"
+    ></dukes-accordion>
   </div>
 </div>
