--- a/src/app/ui/shared/accordion/accordion.component.html
+++ b/src/app/ui/shared/accordion/accordion.component.html
@@ -1,7 +1,7 @@
 <div class="accordion">
   <div class="accordion-item" *ngFor="let course of courses">
     <div class="accordion-item_label" (click)="toggleAccordion($event)">
-      {{ course.name }}
+      <span>{{ course.name }}</span> <i class="fas fa-plus"></i>
     </div>
     <div class="accordion-item_content">
       <div class="accordion-c">
@@ -14,7 +14,7 @@
               class="accordion-c-itemC_label"
               (click)="toggleAccordionC($event)"
             >
-              {{ module.name }}
+              <span>{{ module.name }}</span> <i class="fas fa-plus"></i>
             </div>
             <div class="accordion-c-itemC_contentC">
               <form>
