--- a/src/app/ui/shared/accordion/accordion.component.scss
+++ b/src/app/ui/shared/accordion/accordion.component.scss
@@ -10,48 +10,50 @@
     width: 100%;
 
     &_label {
-      background: styles.$color-blue;
+      align-items: center;
+      background: rgba(styles.$color-blue, 0.5);
+      backdrop-filter: brightness(20%);
       border-radius: 5px;
       color: styles.$color-white;
       cursor: pointer;
+      display: flex;
       font-size: 1.5rem;
       font-weight: 500;
       font-family: "Noto Sans JP", sans-serif;
+      justify-content: space-between;
       position: relative;
       padding: styles.$box-pad-base;
 
-      &::before {
-        content: "+";
-        font-size: 2.5rem;
-        right: calc(25px + styles.$box-pad-base);
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+      i {
+        margin-top: 5px;
+        margin-right: calc(10px + styles.$box-pad-base);
+        pointer-events: none;
+        transition: styles.$animation-bezier;
       }
 
       &.active {
-        &::before {
-          content: "-";
+        i {
+          transform: rotate(45deg);
         }
       }
     }
 
     &_content {
+      @include styles.animation-scale-in_X;
       align-items: center;
-      background-color: rgba(styles.$color-secondary, 0.5);
-      backdrop-filter: brightness(90%);
-      display: flex;
-      height: 0;
+      background-color: rgba(styles.$color-tertiary, 0.5);
+      backdrop-filter: brightness(70%);
+      display: none;
       justify-content: center;
       overflow: hidden;
       overflow-y: auto;
       position: relative;
+      padding: styles.$box-pad-half;
       transition: styles.$animation-bezier;
       width: 100%;
 
       &.active {
-        height: auto;
-        padding: styles.$box-pad-half;
+        display: flex;
       }
 
       .accordion-c {
@@ -64,37 +66,39 @@
           width: 100%;
 
           &_label {
-            background-color: rgba(styles.$color-blue, 0.5);
+            align-items: center;
+            background-color: rgba(styles.$color-blue-1, 0.5);
             backdrop-filter: brightness(20%);
             border-radius: 5px;
             color: styles.$color-white;
             cursor: pointer;
+            display: flex;
             font-size: 1.5rem;
             font-weight: 500;
             font-family: "Noto Sans JP", sans-serif;
+            justify-content: space-between;
             position: relative;
             padding: styles.$box-pad-base;
 
-            &::before {
-              content: "+";
-              font-size: 2.5rem;
-              right: calc(25px + styles.$box-pad-base);
-              position: absolute;
-              top: 50%;
-              transform: translateY(-50%);
+            i {
+              margin-top: 5px;
+              margin-right: calc(10px + styles.$box-pad-base);
+              pointer-events: none;
+              transition: styles.$animation-bezier;
             }
 
             &.active {
-              &::before {
-                content: "-";
+              i {
+                transform: rotate(45deg);
               }
             }
           }
 
           &_contentC {
             align-items: center;
-            background-color: rgba(styles.$color-tertiary, 0.5);
-            backdrop-filter: brightness(70%);
+            background-color: rgba(styles.$color-secondary, 0.4);
+            backdrop-filter: brightness(40%);
+
             display: flex;
             height: 0;
             overflow: hidden;
