--- a/src/app/ui/shared/accordion/accordion.component.html
+++ b/src/app/ui/shared/accordion/accordion.component.html
@@ -44,6 +44,8 @@
                       placeholder="Asignar nota"
                       name="moduleNote"
                       required
+                      min="0"
+                      max="100"
                       [ngModel]
                       #moduleNote="ngModel"
                       [class.invalid]="moduleNote.invalid && moduleNote.touched"
@@ -54,6 +56,18 @@
                       *ngIf="!moduleNote.value && moduleNote.touched"
                     >
                       La nota es requerida.
+                    </div>
+                    <div
+                      class="message-error"
+                      *ngIf="moduleNote.value && moduleNote.value < 0"
+                    >
+                      La nota no puede ser menor a 0.
+                    </div>
+                    <div
+                      class="message-error"
+                      *ngIf="moduleNote.value && moduleNote.value > 100"
+                    >
+                      La nota no puede ser mayor a 100.
                     </div>
                   </div>
                   <div class="form-group">
