[FEAT] Exportar Listados a PDF
Se implementó la funcionalidad de exportar las tablas/listados de usuarios y programas en formato PDF

HU - Exportar datos a PDF

--- a/src/app/ui/tabs/list-program/list-program.component.html
+++ b/src/app/ui/tabs/list-program/list-program.component.html
@@ -1,6 +1,6 @@
 <div class="list-programs">
   <dukes-loading *ngIf="loading"></dukes-loading>
-  <div class="list-programs_content" *ngIf="!loading">
+  <div class="list-programs_content" *ngIf="!loading" id="pdfTable" #pdfTable>
     <table id="excel-table">
       <thead>
         <tr>
@@ -40,6 +40,9 @@
         </tr>
       </tbody>
     </table>
+    <button class="btn-general" (click)="downloadAsPDF()">
+      Exportar a PDF
+    </button>
     <button class="btn-general" (click)="exportToExcel()">
       Exportar a Excel
     </button>
