--- a/src/app/ui/tabs/score-user/score-user.component.html
+++ b/src/app/ui/tabs/score-user/score-user.component.html
@@ -1,1 +1,10 @@
-<p>score-user works!</p>
+<div class="score-user">
+  <div class="score-user_content">
+    <dukes-accordion
+      [program]="program"
+      [courses]="courses"
+      [modules]="modules"
+      [userId]="userId"
+    ></dukes-accordion>
+  </div>
+</div>
