--- a/src/app/ui/shared/accordion/accordion.component.html
+++ b/src/app/ui/shared/accordion/accordion.component.html
@@ -72,7 +72,7 @@
                   </div>
                   <div class="form-group">
                     <select
-                      name="user"
+                      name="userId"
                       required
                       [ngModel]
                       #user="ngModel"
